[gd_scene load_steps=21 format=2]

[ext_resource path="res://scenes/Play/PlayerSetup.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/map/MainMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Play/MainScene.gd" type="Script" id=4]
[ext_resource path="res://scenes/Play/EnemyObject.gd" type="Script" id=5]
[ext_resource path="res://scenes/enemies/Enemy1.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Play/EnemyManager.gd" type="Script" id=7]
[ext_resource path="res://scenes/Play/PathTree.gd" type="Script" id=8]
[ext_resource path="res://scenes/Play/PitCover.tscn" type="PackedScene" id=9]
[ext_resource path="res://sprites/allies/PileOfAntlers2.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/allies/PileOfAntlers1.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/narrative/NarrativeShower.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/narrative/NarrativeScript.gd" type="Script" id=13]
[ext_resource path="res://sprites/environment/pit.png" type="Texture" id=14]
[ext_resource path="res://scenes/enemies/Enemy2.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/enemies/Enemy3.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/enemies/Enemy6.tscn" type="PackedScene" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.5, 18 )

[sub_resource type="CircleShape2D" id=3]
radius = 32.9848

[sub_resource type="CapsuleShape2D" id=2]
radius = 14.5
height = 29.0

[node name="MainScene" type="Node"]
script = ExtResource( 4 )

[node name="LevelMap" parent="." instance=ExtResource( 2 )]

[node name="PitNode" type="Node2D" parent="."]
position = Vector2( -100, -100 )
z_index = 1

[node name="PitCollisionBody" type="StaticBody2D" parent="PitNode"]

[node name="PitCollisionShape" type="CollisionShape2D" parent="PitNode/PitCollisionBody"]
shape = SubResource( 1 )

[node name="PitAvoidanceBody" type="StaticBody2D" parent="PitNode"]

[node name="PitAvoidanceShape" type="CollisionShape2D" parent="PitNode/PitAvoidanceBody"]
shape = SubResource( 3 )
disabled = true

[node name="Pit" type="Sprite" parent="PitNode"]
texture = ExtResource( 14 )

[node name="PitCoverNode" parent="PitNode" instance=ExtResource( 9 )]
visible = false

[node name="AntlerPile1Node" type="Node2D" parent="."]
position = Vector2( -100, -100 )

[node name="Pile" parent="AntlerPile1Node" instance=ExtResource( 11 )]
position = Vector2( 0, 5 )

[node name="Antler1CollisionBody" type="StaticBody2D" parent="AntlerPile1Node"]

[node name="AntlerCollisionShape" type="CollisionShape2D" parent="AntlerPile1Node/Antler1CollisionBody"]
position = Vector2( 1, 1 )
rotation = 1.57079
shape = SubResource( 2 )
disabled = true

[node name="AntlerPile2Node" type="Node2D" parent="."]
position = Vector2( -100, -100 )

[node name="Pile" parent="AntlerPile2Node" instance=ExtResource( 10 )]

[node name="Antler2CollisionBody" type="StaticBody2D" parent="AntlerPile2Node"]
visible = false

[node name="AntlerCollisionShape" type="CollisionShape2D" parent="AntlerPile2Node/Antler2CollisionBody"]
position = Vector2( 3.5, -1 )
shape = SubResource( 1 )
disabled = true

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 76, 37 )
z_index = 1

[node name="PathTree" type="Node" parent="."]
script = ExtResource( 8 )

[node name="Path_Start" type="Position2D" parent="PathTree"]
position = Vector2( 825, 272 )

[node name="Path_Right" type="Position2D" parent="PathTree"]
position = Vector2( 768, 272 )

[node name="Path_RightTop" type="Position2D" parent="PathTree"]
position = Vector2( 768, 80 )

[node name="Path_TopRight" type="Position2D" parent="PathTree"]
position = Vector2( 624, 48 )

[node name="Path_Top" type="Position2D" parent="PathTree"]
position = Vector2( 400, 112 )

[node name="Path_TopLeft" type="Position2D" parent="PathTree"]
position = Vector2( 208, 16 )

[node name="Path_Fork" type="Position2D" parent="PathTree"]
position = Vector2( 680, 257 )

[node name="Path_CampsiteTopRight" type="Position2D" parent="PathTree"]
position = Vector2( 773, 450 )

[node name="Path_CampsiteTopLeft" type="Position2D" parent="PathTree"]
position = Vector2( 576, 400 )

[node name="Path_CampsiteBottomRight" type="Position2D" parent="PathTree"]
position = Vector2( 733, 547 )

[node name="Path_CampsiteBottomLeft" type="Position2D" parent="PathTree"]
position = Vector2( 642, 560 )

[node name="Path_Left" type="Position2D" parent="PathTree"]
position = Vector2( 42, 163 )

[node name="Path_EndLeft" type="Position2D" parent="PathTree"]
position = Vector2( -16, 133 )

[node name="Path_Bottom" type="Position2D" parent="PathTree"]
position = Vector2( 432, 584 )

[node name="Path_EndBottom" type="Position2D" parent="PathTree"]
position = Vector2( 400, 625 )

[node name="Path_ClearingTopRight" type="Position2D" parent="PathTree"]
position = Vector2( 464, 336 )

[node name="Path_ClearingTop" type="Position2D" parent="PathTree"]
position = Vector2( 304, 280 )

[node name="Path_ClearingLeft" type="Position2D" parent="PathTree"]
position = Vector2( 64, 400 )

[node name="Path_ClearingCenter" type="Position2D" parent="PathTree"]
position = Vector2( 320, 416 )

[node name="EnemyManager" type="Node" parent="."]
script = ExtResource( 7 )

[node name="EnemyObject" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Enemies" type="Node" parent="."]

[node name="Enemy1" parent="Enemies" instance=ExtResource( 6 )]
position = Vector2( 825, 272 )
scale = Vector2( 0.375, 0.375 )
z_index = 1

[node name="Enemy2" parent="Enemies" instance=ExtResource( 15 )]
position = Vector2( 896, 272 )
z_index = 1

[node name="Enemy3" parent="Enemies" instance=ExtResource( 16 )]
position = Vector2( 880, 248 )
z_index = 1

[node name="Enemy4" parent="Enemies" instance=ExtResource( 17 )]
position = Vector2( 864, 288 )
z_index = 1

[node name="PlacementArea" type="Control" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 736.0
margin_bottom = 544.0
mouse_filter = 1

[node name="Control" parent="." instance=ExtResource( 1 )]
margin_top = 123.2
margin_bottom = 99.2

[node name="NarrativeBaseNode" parent="." instance=ExtResource( 12 )]
position = Vector2( 0, 512 )
script = ExtResource( 13 )

[connection signal="gui_input" from="PlacementArea" to="." method="_on_PlacementArea_gui_input"]
